# aoc25

./: .clang-format  .gitignore  CMakeLists.txt  main.cpp  run.sh
common/: utils.cpp
days/: day01.cpp  day02.cpp  day03.cpp  day04.cpp  day05.cpp  day06.cpp  day07.cpp  day08.cpp
include/: day01.hpp  day02.hpp  day03.hpp  day04.hpp  day05.hpp  day06.hpp  day07.hpp  day08.hpp  utils.hpp
